update stat bg img

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 	<div id="numbers" class="section sm-padding">
 
 		<!-- Background Image -->
-		<div class="bg-img" style="background-image: url('./img/sf-bg-2.jpg');">
+		<div class="bg-img dc-stat-bg" style="background-image: url('./img/sf-bg-2.jpg');">
 			<div class="overlay"></div>
 		</div>
 		<!-- /Background Image -->
