favicon, description, scroll prop for ipad

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
 	<title>Drawing Capital</title>
     <meta property="og:image" content="https://drawingcapital.com/img/drawing_capital_og_image.jpg" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="Providing access to the opportunities of a rapidly changing world through technology-driven investment solutions." />
 
-    <meta property="og:url"content="http://www.drawingcapital.com" />
+    <meta property="og:url"content="https://www.drawingcapital.com" />
 
     <meta property="og:title" content="Drawing Capital" />
-    <meta name="description" content="Providing access to the opportunities of a rapidly changing world through technology-driven investment solutions.">
+	<meta name="description" content="Providing access to the opportunities of a rapidly changing world through technology-driven investment solutions.">
+	
+	<link rel="icon" type="image/png" href="/favicon-32x32.png"/>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
