--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
 				<div class="col-sm-3 col-xs-6">
 					<div class="number">
 						<i class="fa fa-check-circle"></i>
-						<h3 class="white-text"><span class="counter">12</span></h3>
-						<span class="white-text">New Investments Monthly</span>
+						<h3 class="white-text"><span class="counter">$100k</span></h3>
+						<span class="white-text">Minimum</span>
 					</div>
 				</div>
 				<!-- /number -->
