--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 				<!-- Work -->
 				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="./img/why-1.jpg" alt="">
+					<img class="img-responsive" src="./img/why-num-1.jpg" alt="">
 					<div class="overlay"></div>
 					<div class="work-content">
 						<span>- 1 -</span>
@@ -177,7 +177,7 @@
 
 				<!-- Work -->
 				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="./img/why-2.jpg" alt="">
+					<img class="img-responsive" src="./img/why-num-2.jpg" alt="">
 					<div class="overlay"></div>
 					<div class="work-content">
 						<span>- 2 -</span>
@@ -191,7 +191,7 @@
 
 				<!-- Work -->
 				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="./img/why-3.jpg" alt="">
+					<img class="img-responsive" src="./img/why-num-3.jpg" alt="">
 					<div class="overlay"></div>
 					<div class="work-content">
 						<span>- 3 -</span>
