update why now images

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 				<!-- Work -->
 				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="./img/why-num-1.jpg" alt="">
+					<img class="img-responsive" src="./img/now-1.png" alt="">
 					<div class="overlay"></div>
 					<div class="work-content">
 						<span>- 1 -</span>
@@ -189,7 +189,7 @@
 
 				<!-- Work -->
 				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="./img/why-num-2.jpg" alt="">
+					<img class="img-responsive" src="./img/now-2.png" alt="">
 					<div class="overlay"></div>
 					<div class="work-content">
 						<span>- 2 -</span>
@@ -203,7 +203,7 @@
 
 				<!-- Work -->
 				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="./img/why-num-3.jpg" alt="">
+					<img class="img-responsive" src="./img/now-3.png" alt="">
 					<div class="overlay"></div>
 					<div class="work-content">
 						<span>- 3 -</span>
