update features icons

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 
                 <div class="container">
                   <p class="about-txt text-center">At Drawing Capital Group LLC (“Drawing Capital”), our mission is to help investors access an optimal balance of risk and reward while maintaining total alignment of goals and incentives. In doing so, we believe we can broaden the economic foundation of our partners and empower them to further support the causes and relationships that are most important to them.
-                    <br><br>We leverage our expertise in finance, technology, and data science to create a robust framework for decision-making and introduce opportunities in public markets not captured by buy-and-hold or passive investment approaches.</p>
+					<br><br>We leverage our expertise in finance, technology, and data science to create a robust framework for decision-making and introduce opportunities in public markets not captured by buy-and-hold or passive investment approaches.
+					<br><br><b>Drawing Capital is only accepting new investments on an invitation-only basis.</b></p>
                 </div>
 
 			</div>
@@ -382,43 +383,43 @@
 			<div class="row">
 
 				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
+				<!-- <div class="col-sm-3 col-xs-6">
 					<div class="number">
 						<i class="fa fa-toggle-on"></i>
 						<h3 class="white-text"><span class="counter">2</span></h3>
 						<span class="white-text">Fee Options</span>
 					</div>
-				</div>
+				</div> -->
 				<!-- /number -->
 
 				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
+				<div class="col-sm-12 col-xs-12">
 					<div class="number">
-						<i class="fa fa-check-circle"></i>
-						<h3 class="white-text"><span class="counter">$100k</span></h3>
-						<span class="white-text">Minimum</span>
+						<i class="fa fa-envelope-open"></i>
+						<h3 class="white-text"><span class="counter">New Investors</span></h3>
+						<span class="white-text">Invitation Only</span>
 					</div>
 				</div>
 				<!-- /number -->
 
 				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
+				<!-- <div class="col-sm-3 col-xs-6">
 					<div class="number">
 						<i class="fa fa-sign-out"></i>
 						<h3 class="white-text"><span class="counter">4</span></h3>
 						<span class="white-text">Quarterly Liquidity</span>
 					</div>
-				</div>
+				</div> -->
 				<!-- /number -->
 
 				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
+				<!-- <div class="col-sm-3 col-xs-6">
 					<div class="number">
 						<i class="fa fa-laptop"></i>
 						<h3 class="white-text"><span class="counter">24/7</span></h3>
 						<span class="white-text">Online Reporting</span>
 					</div>
-				</div>
+				</div> -->
 				<!-- /number -->
 
 			</div>
