Fixed sorting. Fixed scrolling and froze header and 1st col.

--- a/insights.html
+++ b/insights.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>Insights</title>
     <link rel="stylesheet" href="style.css">
-    	<!-- Custom stlylesheet -->
-  	<link type="text/css" rel="stylesheet" href="css/style.css" />
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://unpkg.com/d3-simple-slider"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
   </head>
   <body>
+    <!-- <h2>Range</h2>
+    <input type="range" name="mySlider" id=mySlider min="0" max="60000000" value="50"> -->
     <div id="table"></div>
     <script src="insights.js"></script>
   </body>
