--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       
 		<!-- Nav -->
 		<nav id="nav" class="navbar nav-transparent">
-			<div class="container">
+			<div class="container nav-container">
 
 				<div class="navbar-header">
 					<!-- Logo -->
@@ -97,6 +97,7 @@
 					<li><a href="#team">Team</a></li>
 					<li><a href="#blog">Research</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<a href="./insights.html" class="btn btn-primary">Insights  <i class="fa fa-external-link"></i></a>
 				</ul>
 				<!-- /Main navigation -->
 
