Put table in a div that's scrollable

--- a/insights.html
+++ b/insights.html
@@ -66,7 +66,9 @@
       <div class="section-header text-center">
         <h2 class="title">Insights</h2>
       </div>
-      <div id="table"></div>
+      <div id="table-container">
+        <div id="table"></div>
+      </div>
     </div>
 
     
