Change insights > analytics

--- a/insights.html
+++ b/insights.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   
-    <title>Insights | Drawing Capital</title>
+    <title>Analytics | Drawing Capital</title>
       <meta property="og:image" content="https://drawingcapital.com/img/drawing_capital_og_image.jpg" />
       <meta property="og:description" content="Providing access to the opportunities of a rapidly changing world through technology-driven investment solutions." />
   
@@ -64,7 +64,7 @@
 
     <div class="insights-container">
       <div class="section-header text-center">
-        <h2 class="title">Insights</h2>
+        <h2 class="title">Analytics</h2>
       </div>
       <div id="table-container">
         <div id="table"></div>
