--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<li><a href="#team">Team</a></li>
 					<li><a href="#blog">Research</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<a href="./insights.html" class="btn btn-primary">Analytics  <i class="fa fa-external-link"></i></a>
+					<a href="./analytics.html" class="btn btn-primary">Analytics  <i class="fa fa-external-link"></i></a>
 				</ul>
 				<!-- /Main navigation -->
 
