Removed extra sliders; Added columns like NTM Rev, Magic Number, and Implied YoY Rev Growth; and removed columns like Sector and Country.

--- a/analytics.html
+++ b/analytics.html
@@ -17,6 +17,6 @@
         <div id="box"></div>
       </div>
     </div>
-    <script src="insights.js"></script>
+    <script src="analytics.js"></script>
   </body>
 </html>
