--- a/analytics.html
+++ b/analytics.html
@@ -2,21 +2,65 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Analytics</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Analytics | Drawing Capital</title>
+
+    <link rel="stylesheet" href="./style.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css" />
+    
+    <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
+
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.5.3/numeral.min.js"></script>
   </head>
+
   <body>
+
+    <!-- Nav -->
+    <nav class="navbar">
+      <div class="nav-container">
+        <a href="index.html">
+          <img class="nav-logo" src="./img/logo_name.png">
+        </a>
+      </div>
+    </nav>
+
+    <!-- Title -->
+    <div class="title-container">
+      <h2 class="anl-title">Analytics</h2>
+      <h4 class="anl-subtitle">Technology Sector</h4>
+    </div>
+
+    <!-- DATA -->
     <!-- <h2>Range</h2>
     <input type="range" name="mySlider" id=mySlider min="0" max="60000000" value="50"> -->
-    <div id="settings"></div>
+    <div class="settings-container">
+      <div id="settings"></div>
+    </div>
     <div id="shell">
       <div id="container">
         <div id="box"></div>
       </div>
     </div>
+
+    <!-- FOOTER -->
+    <footer class="anl-footer">
+      <div class="foot-cont">
+        <a href="./index.html">
+          <img class="footer-logo" src="./img/logo_name_white.png">
+        </a>
+      </div>
+      <div class="footer-legal-cont">
+        <p class="foot-legal">© Drawing Capital Group LLC 2020.</p>
+        <p class="foot-legal">This site is not intended to provide any investment, financial, legal, regulatory, accounting, tax or similar advice, and nothing on this site should be construed as a recommendation by Drawing Capital Group LLC (“Drawing Capital”), its affiliates, or any third party, to acquire or dispose of any investment or security, or to engage in any investment strategy or transaction. An investment in any strategy involves a high degree of risk and there is always the possibility of loss, including the loss of principal. Nothing in this Site may be considered as an offer or solicitation to purchase or sell securities or other services. By accessing this website and any materials presented herein (the "Site"), you accept in their entirety and without modification the following terms and conditions pertaining to the use of the Site. Drawing Capital reserves the right to change the terms, conditions and notices under which this Site is offered without notice at any time. You acknowledge and agree that Drawing Capital may restrict, suspend or terminate the Terms of Use or your access to, and use of, all or any part of the Site, including any links to third-party sites, at any time, with or without cause, including but not limited to any breach of the Terms of Use as determined in Drawing Capital’ absolute discretion, and without prior notice or liability. Each use of the Site constitutes your agreement to be bound by the then-current terms and conditions set forth in these Terms of Use. If you do not agree with the Terms of Use, you are not granted permission to access or otherwise use this Site.</p>
+        <div class="terms-cont">
+          <a class="terms-link" href="./privacy-policy.html">Terms of Use</a>
+        </div>
+      </div>
+    </footer>
+
+
     <script src="analytics.js"></script>
   </body>
 </html>
