--- a/analytics.html
+++ b/analytics.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Analytics | Drawing Capital</title>
+    <link rel="icon" type="image/png" href="/favicon-32x32.png"/>
 
     <link rel="stylesheet" href="./style.css">
     <link type="text/css" rel="stylesheet" href="css/style.css" />
