change class name for footer logos

--- a/analytics.html
+++ b/analytics.html
@@ -49,7 +49,7 @@
     <footer class="anl-footer">
       <div class="foot-cont">
         <a href="./index.html">
-          <img class="footer-logo" src="./img/logo_name_white.png">
+          <img class="foot-logo" src="./img/logo_name_white.png">
         </a>
       </div>
       <div class="footer-legal-cont">
