Cleaned up some uneccessary html elements; Centered the settings/range bars

--- a/analytics.html
+++ b/analytics.html
@@ -34,15 +34,13 @@
     </div>
 
     <!-- DATA -->
-    <!-- <h2>Range</h2>
-    <input type="range" name="mySlider" id=mySlider min="0" max="60000000" value="50"> -->
     <div class="settings-container">
       <div id="settings"></div>
     </div>
-    <div id="shell">
-      <div id="container">
-        <div id="box"></div>
-      </div>
+
+
+    <div id="csv-container">
+      <div id="csv"></div>
     </div>
 
     <!-- FOOTER -->
