Add the date that we updated the csv

--- a/analytics.html
+++ b/analytics.html
@@ -39,6 +39,9 @@
     </div>
 
 
+    <div id="updated-container">
+      <p>Updated: 11/27/2020</p>
+    </div>
     <div id="csv-container">
       <div id="csv"></div>
     </div>
