--- a/analytics.html
+++ b/analytics.html
@@ -42,6 +42,10 @@
     <div id="updated-container">
       <p>Updated: 11/27/2020</p>
     </div>
+    <div id="directions-container">
+      <p>Scroll down/right in the table to see more</p>
+      <p>Click on headers to sort</p>
+    </div>
     <div id="csv-container">
       <div id="csv"></div>
     </div>
