--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                           <div class="number">
                             <i class="fas fa-people-carry"></i>
                             <div class="desc text-center">
-                              <h4>Alignment</h4>
+                              <h4>Incentive Alignment</h4>
                               <p>Drawing Capital offers a unique standalone performance-based fee of 10% so that we're best aligned with what matters to investors: growth.</p>
                             </div>
                           </div>
