update about section

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				<!-- /Section header -->
 
                 <div class="container">
-                  <p class="about-txt text-center">We founded Drawing Capital, a private investment firm, to provide access to high-growth opportunities in the “innovation economy”. We seek to deliver high cumulative returns by leveraging our expertise in data science, technology, and finance to discover rapidly expanding markets and allocate capital to the most promising leaders.
+                  <p class="about-txt text-center">We founded Drawing Capital, a private investment firm, to provide access to high-growth opportunities in the “innovation economy”. We seek to deliver high returns by leveraging our expertise in data science, technology, and finance to discover rapidly expanding markets and allocate capital to the most promising leaders.
 					  <br><br>Drawing Capital is a pioneer in investment management alignment and offers a standalone performance-based fee. In this way, investors only pay fees on new profits earned, or new "highs".</p>
                 </div>
 
