--- a/analytics.html
+++ b/analytics.html
@@ -43,7 +43,7 @@
 
 
     <div id="updated-container">
-      <p>Updated: 01/27/2021</p>
+      <p>Updated: 02/15/2021</p>
     </div>
     <div id="directions-container">
       <p>Scroll down/right in the table to see more</p>
@@ -52,7 +52,10 @@
     <div id="csv-container">
       <div id="csv"></div>
     </div>
-
+    <div id="footnotes-container">
+      <p>*Estimated using formula: (LTM Revenue - COGS - Sales/Marketing Expenses)/(LTM Revenue) </p>
+      <p>Click on headers to sort</p>
+    </div>
     <!-- FOOTER -->
     <footer class="anl-footer">
       <div class="foot-cont">
