--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTKEQsQa-48u1FUf_C3LY4IDUn6Na9M5AGcTTcIerk_TKimjz1jlPzjipha7JaFFfhdyEow0KJdxB44/pubhtml?widget=true&amp;headers=false", width=100% height=100%></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/1s9n6dvSwcHNMk4PUkoftv9_PkqhZPIiO2YmOlUAznCU/edit?usp=sharing&embedded=true&rm=demo&widget=false" height="100%" width="100%"></iframe>
