--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/spreadsheets/d/1s9n6dvSwcHNMk4PUkoftv9_PkqhZPIiO2YmOlUAznCU/edit?usp=sharing&embedded=true&rm=demo&widget=false" height="100%" width="100%"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/1s9n6dvSwcHNMk4PUkoftv9_PkqhZPIiO2YmOlUAznCU/edit?usp=sharing&embedded=true&rm=minimal&chrome=false" height="100%" width="100%"></iframe>
