Include podcast in Research section

--- a/index.html
+++ b/index.html
@@ -551,10 +551,10 @@
                 </div>
                 <div class="col col-md-6 bg-dark">
                     <div class="number">
-                      <i class="fa fa-th-list"></i>
-                      <h4 class="white-text">Past Newsletters</h4>
-                      <p>Review our previous letters before subscribing.</p>
-                      <a href="https://drawingcapital.substack.com/" class="white-btn" target="_blank">View</a>
+                      <i class="fas fa-podcast"></i>
+                      <h4 class="white-text">'The Recap' Podcast</h4>
+                      <p>Dissecting the week's most important events in investing and tech in 15 minutes or less.</p>
+                      <a href="https://anchor.fm/drawing-capital" class="white-btn" target="_blank">Listen Now</a>
                    </div>
                 </div>
             </div>
