Apr 21 info updates

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	<link rel="icon" type="image/png" href="/favicon-32x32.png"/>
 
 	<!-- Google font -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">	
 
 	<!-- Bootstrap -->
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
@@ -91,13 +92,14 @@
 
 				<!--  Main navigation  -->
 				<ul class="main-nav nav navbar-nav navbar-right">
-					<li><a href="#about">About</a></li>
-                    <li><a href="#service">Themes</a></li>
-                    <li><a href="#features">Benefits</a></li>
-					<li><a href="#team">Team</a></li>
-					<li><a href="#blog">Research</a></li>
-					<li><a href="#contact">Inquire</a></li>
-					<a href="./analytics.html" class="btn btn-primary">Analytics  <i class="fa fa-external-link"></i></a>
+					<!-- <li><a href="#about">About</a></li> -->
+                    <!-- <li><a href="#service">Themes</a></li>
+                    <li><a href="#features">Benefits</a></li> -->
+					<!-- <li><a href="#team">Team</a></li> -->
+					<!-- <li><a href="#blog">Research</a></li> -->
+					<li><a href="#blog">MEDIA</a></li>
+					<li><a href="./analytics.html">ANALYTICS</a></li>
+					<a href="mailto:invest@drawingcapital.com" class="btn btn-primary">CONTACT US</a>
 				</ul>
 				<!-- /Main navigation -->
 
@@ -114,8 +116,8 @@
 					<!-- home content -->
 					<div class="col-md-10 col-md-offset-1">
 						<div class="home-content">
-							<h1 class="white-text">The Art of Opportunity</h1>
-							<p class="white-text">Providing access to the opportunities of a rapidly changing world through technology-driven investment solutions.</p>
+							<h1 class="white-text" id="main-line">Investing in the innovation economy</h1>
+							<p class="main-desc white-text">Drawing Capital gives individuals and institutions the ability to participate in innovation and technological advancement through public markets.</p>
                             <a href="https://www.theoremfundservices.com/portal/" class="main-btn btn-wd-1" target="_blank">LP Login</a>
 						</div>
 					</div>
@@ -140,7 +142,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">ABOUT</h2>
+					<h2 class="title">Investment Philosophy</h2>
 				</div>
 				<!-- /Section header -->
 
@@ -236,60 +238,42 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">KEY THEMES</h2>
+					<h2 class="title">Advantages</h2>
 				</div>
 				<!-- /Section header -->
 
 				<!-- service -->
-				<div class="col-md-4 col-sm-6">
+				<div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="service">
-						<i class="fa fa-battery-full"></i>
-						<h3 class="theme-title">Energy</h3>
+						<i class="fas fa-hand-holding-usd"></i>
+						<h3 class="theme-title">High degree of liquidity</h3>
 					</div>
 				</div>
 				<!-- /service -->
 
 				<!-- service -->
-				<div class="col-md-4 col-sm-6">
+				<div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="service">
-						<i class="fa fa-dna"></i>
-						<h3 class="theme-title">Biotechnology</h3>
+						<i class="far fa-handshake"></i>
+						<h3 class="theme-title">Superior incentive alignment</h3>
 					</div>
 				</div>
 				<!-- /service -->
 
 				<!-- service -->
-				<div class="col-md-4 col-sm-6">
+				<div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="service">
-						<i class="fas fa-brain"></i>
-						<h3 class="theme-title">Artificial Intelligence</h3>
+						<i class="fas fa-leaf"></i>
+						<h3 class="theme-title">ESG-Conscious</h3>
 					</div>
 				</div>
 				<!-- /service -->
 
 				<!-- service -->
-				<div class="col-md-4 col-sm-6">
+				<div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="service">
-						<i class="fa fa-code"></i>
-						<h3 class="theme-title">Software</h3>
-					</div>
-				</div>
-				<!-- /service -->
-
-				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fab fa-uncharted"></i>
-						<h3 class="theme-title">Crypto Assets</h3>
-					</div>
-				</div>
-				<!-- /service -->
-
-				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-fingerprint"></i>
-						<h3 class="theme-title">XaaS</h3>
+						<i class="fas fa-random"></i>
+						<h3 class="theme-title">Low correlation to benchmarks</h3>
 					</div>
 				</div>
 				<!-- /service -->
@@ -305,21 +289,21 @@
 
 
 	<!-- Why Choose Us -->
-	<div id="features" class="section md-padding bg-grey">
+	<!-- <div id="features" class="section md-padding bg-grey"> -->
 
 		<!-- Container -->
-		<div class="container">
+		<!-- <div class="container"> -->
 
 			<!-- Row -->
-			<div class="row">
+			<!-- <div class="row"> -->
 
 				<!-- why choose us content -->
-                <div class="section-header text-center">
+                <!-- <div class="section-header text-center">
                     <h2 class="title">BENEFITS</h2>
-                </div>
+                </div> -->
               
 				<!-- /why choose us content -->
-                <section class="featured-area">
+                <!-- <section class="featured-area">
                   <div class="container">
                     <div class="row">
                       <div class="col-md-4">
@@ -360,13 +344,13 @@
                   </div>
                 </section>
 
-			</div>
+			</div> -->
 			<!-- /Row -->
 
-		</div>
+		<!-- </div> -->
 		<!-- /Container -->
 
-	</div>
+	<!-- </div> -->
 	<!-- /Why Choose Us -->
 
 
@@ -445,7 +429,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">TEAM</h2>
+					<h2 class="title">Team</h2>
 				</div>
 				<!-- /Section header -->
 
@@ -541,7 +525,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">RESEARCH</h2>
+					<h2 class="title">Media</h2>
 				</div>
 			</div>
 			<!-- /Row -->
@@ -575,7 +559,7 @@
 
 				<!-- Section-header -->
 				<div class="section-header text-center">
-					<h2 class="title contact">Inquire</h2>
+					<h2 class="title contact">Contact Us</h2>
 				</div>
 				<!-- /Section-header -->
 
