--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
 				<!-- /Section header -->
 
                 <div class="container">
-                  <p class="about-txt text-center">We founded Drawing Capital, a private investment firm, to provide access to high-growth opportunities in the “innovation economy”. We seek to deliver high returns by leveraging our expertise in data science, technology, and finance to discover rapidly expanding markets and allocate capital to the most promising leaders.
-					  <br><br>Drawing Capital is a pioneer in investment management alignment and offers a standalone performance-based fee. In this way, investors only pay fees on new profits earned, or new "highs".</p>
+                  <p class="about-txt text-center">Drawing Capital aims to capture the expansion of a technology-forward world by investing in leaders that we believe carry undervalued growth. We leverage our expertise in finance and data science to maximize investment opportunities in public markets not captured by passive investing.</p>
                 </div>
 
 			</div>
