About Us Update

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				<!-- /Section header -->
 
                 <div class="container">
-                  <p class="about-txt text-center">Drawing Capital aims to capture the expansion of a technology-forward world by investing in leaders that we believe carry undervalued growth. We leverage our expertise in finance and data science to maximize investment opportunities in public markets not captured by passive investing.</p>
+                  <p class="about-txt text-center">Drawing Capital aims to capture the expansion of a technology-forward world by investing in leaders that we believe carry undervalued growth. Our expertise in finance and data science enable us to maximize investment opportunities in public markets not captured by passive investing.</p>
                 </div>
 
 			</div>
