--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">Investment Philosophy</h2>
+					<h2 class="title">About Us</h2>
 				</div>
 				<!-- /Section header -->
 
