simple site update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<![endif]-->
 
 	<!-- Hotjar Tracking Code for https://www.drawingcapital.com -->
-	<script>
+	<!-- <script>
 		(function(h,o,t,j,a,r){
 			h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
 			h._hjSettings={hjid:2109922,hjsv:6};
@@ -56,7 +56,7 @@
 			r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 			a.appendChild(r);
 		})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-	</script>
+	</script> -->
 </head>
 
 <body>
@@ -97,7 +97,7 @@
                     <li><a href="#features">Benefits</a></li> -->
 					<!-- <li><a href="#team">Team</a></li> -->
 					<!-- <li><a href="#blog">Research</a></li> -->
-					<li><a href="#blog">MEDIA</a></li>
+					<li><a href="https://drawingcapital.substack.com/" target="_blank">NEWSLETTER</a></li>
 					<li><a href="./analytics.html">ANALYTICS</a></li>
 					<a href="mailto:invest@drawingcapital.com" class="btn btn-primary">CONTACT US</a>
 				</ul>
@@ -116,8 +116,8 @@
 					<!-- home content -->
 					<div class="col-md-10 col-md-offset-1">
 						<div class="home-content">
-							<h1 class="white-text" id="main-line">Investing in the innovation economy</h1>
-							<p class="main-desc white-text">Drawing Capital gives individuals and institutions the ability to participate in innovation and technological advancement through public markets.</p>
+							<img src="./img/logo-transp.png" class="logo-home">
+							<p class="main-desc white-text">Drawing Capital aims to capture the expansion of a technology-forward world by investing in leaders that we believe carry undervalued growth. Our expertise in finance and data science enable us to maximize investment opportunities in public markets not captured by passive investing.</p>
                             <a href="https://www.theoremfundservices.com/portal/" class="main-btn btn-wd-1" target="_blank">LP Login</a>
 						</div>
 					</div>
@@ -132,31 +132,31 @@
 	<!-- /Header -->
 
 	<!-- About -->
-	<div id="about" class="section md-padding bg-grey">
+	<!-- <div id="about" class="section md-padding bg-grey"> -->
 
 		<!-- Container -->
-		<div class="container">
+		<!-- <div class="container"> -->
 
 			<!-- Row -->
-			<div class="row">
+			<!-- <div class="row"> -->
 
 				<!-- Section header -->
-				<div class="section-header text-center">
+				<!-- <div class="section-header text-center">
 					<h2 class="title">About Us</h2>
-				</div>
+				</div> -->
 				<!-- /Section header -->
 
-                <div class="container">
+                <!-- <div class="container">
                   <p class="about-txt text-center">Drawing Capital aims to capture the expansion of a technology-forward world by investing in leaders that we believe carry undervalued growth. Our expertise in finance and data science enable us to maximize investment opportunities in public markets not captured by passive investing.</p>
-                </div>
+                </div> -->
 
-			</div>
+			<!-- </div> -->
 			<!-- /Row -->
 
-		</div>
+		<!-- </div> -->
 		<!-- /Container -->
 
-	</div>
+	<!-- </div> -->
 	<!-- /About -->
 
 
@@ -227,63 +227,63 @@
 	<!-- /Portfolio -->
 
 	<!-- Service -->
-	<div id="service" class="section md-padding">
+	<!-- <div id="service" class="section md-padding"> -->
 
 		<!-- Container -->
-		<div class="container">
+		<!-- <div class="container"> -->
 
 			<!-- Row -->
-			<div class="row">
+			<!-- <div class="row"> -->
 
 				<!-- Section header -->
-				<div class="section-header text-center">
+				<!-- <div class="section-header text-center">
 					<h2 class="title">Advantages</h2>
-				</div>
+				</div> -->
 				<!-- /Section header -->
 
 				<!-- service -->
-				<div class="col-lg-6 col-md-6 col-sm-6">
+				<!-- <div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="service">
 						<i class="fas fa-hand-holding-usd"></i>
 						<h3 class="theme-title">High degree of liquidity</h3>
 					</div>
-				</div>
+				</div> -->
 				<!-- /service -->
 
 				<!-- service -->
-				<div class="col-lg-6 col-md-6 col-sm-6">
+				<!-- <div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="service">
 						<i class="far fa-handshake"></i>
 						<h3 class="theme-title">Superior incentive alignment</h3>
 					</div>
-				</div>
+				</div> -->
 				<!-- /service -->
 
 				<!-- service -->
-				<div class="col-lg-6 col-md-6 col-sm-6">
+				<!-- <div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="service">
 						<i class="fas fa-leaf"></i>
 						<h3 class="theme-title">ESG-Conscious</h3>
 					</div>
-				</div>
+				</div> -->
 				<!-- /service -->
 
 				<!-- service -->
-				<div class="col-lg-6 col-md-6 col-sm-6">
+				<!-- <div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="service">
 						<i class="fas fa-random"></i>
 						<h3 class="theme-title">Low correlation to benchmarks</h3>
 					</div>
-				</div>
+				</div> -->
 				<!-- /service -->
 
-			</div>
+			<!-- </div> -->
 			<!-- /Row -->
 
-		</div>
+		<!-- </div> -->
 		<!-- /Container -->
 
-	</div>
+	<!-- </div> -->
 	<!-- /Service -->
 
 
@@ -354,19 +354,19 @@
 
 
 	<!-- Numbers -->
-	<div id="numbers" class="section sm-padding">
+	<!-- <div id="numbers" class="section sm-padding"> -->
 
 		<!-- Background Image -->
-		<div class="bg-img stat-bg" style="background-image: url('./img/sf-bg-2.jpg');">
+		<!-- <div class="bg-img stat-bg" style="background-image: url('./img/sf-bg-2.jpg');">
 			<div class="overlay"></div>
-		</div>
+		</div> -->
 		<!-- /Background Image -->
 
 		<!-- Container -->
-		<div class="container">
+		<!-- <div class="container"> -->
 
 			<!-- Row -->
-			<div class="row">
+			<!-- <div class="row"> -->
 
 				<!-- number -->
 				<!-- <div class="col-sm-3 col-xs-6">
@@ -379,13 +379,13 @@
 				<!-- /number -->
 
 				<!-- number -->
-				<div class="col-sm-12 col-xs-12">
+				<!-- <div class="col-sm-12 col-xs-12">
 					<div class="number">
 						<i class="fa fa-envelope-open"></i>
 						<h3 class="white-text"><span class="counter">New Investors</span></h3>
 						<span class="white-text">By Invitation</span>
 					</div>
-				</div>
+				</div> -->
 				<!-- /number -->
 
 				<!-- number -->
@@ -408,32 +408,32 @@
 				</div> -->
 				<!-- /number -->
 
-			</div>
+			<!-- </div> -->
 			<!-- /Row -->
 
-		</div>
+		<!-- </div> -->
 		<!-- /Container -->
 
-	</div>
+	<!-- </div> -->
 	<!-- /Numbers -->
 
 	<!-- Team -->
-	<div id="team" class="section md-padding">
+	<!-- <div id="team" class="section md-padding"> -->
 
 		<!-- Container -->
-		<div class="container">
+		<!-- <div class="container"> -->
 
 			<!-- Row -->
-			<div class="row">
+			<!-- <div class="row"> -->
 
 				<!-- Section header -->
-				<div class="section-header text-center">
+				<!-- <div class="section-header text-center">
 					<h2 class="title">Team</h2>
-				</div>
+				</div> -->
 				<!-- /Section header -->
 
 				<!-- team -->
-				<div class="col-sm-4">
+				<!-- <div class="col-sm-4">
 					<div class="team">
 						<div class="team-img">
 							<img class="img-responsive" src="./img/sagar_dc_sq.png" alt="">
@@ -453,11 +453,11 @@
 							<span>Managing Partner</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- /team -->
 
 				<!-- team -->
-				<div class="col-sm-4">
+				<!-- <div class="col-sm-4">
 					<div class="team">
 						<div class="team-img">
 							<img class="img-responsive" src="./img/sean_dc_sq.jpg" alt="">
@@ -477,11 +477,11 @@
 							<span>Managing Partner</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- /team -->
 
 				<!-- team -->
-				<div class="col-sm-4">
+				<!-- <div class="col-sm-4">
 					<div class="team">
 						<div class="team-img">
 							<img class="img-responsive" src="./img/jugal_dc_sq.png" alt="">
@@ -501,34 +501,34 @@
 							<span>Managing Partner</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- /team -->
 
-			</div>
+			<!-- </div> -->
 			<!-- /Row -->
 
-		</div>
+		<!-- </div> -->
 		<!-- /Container -->
 
-	</div>
+	<!-- </div> -->
 	<!-- /Team -->
 
 	<!-- Blog -->
-	<div id="blog" class="section md-padding bg-grey">
+	<!-- <div id="blog" class="section md-padding bg-grey"> -->
 
 		<!-- Container -->
-		<div class="container">
+		<!-- <div class="container"> -->
 
 			<!-- Row -->
-			<div class="row">
+			<!-- <div class="row"> -->
 
 				<!-- Section header -->
-				<div class="section-header text-center">
+				<!-- <div class="section-header text-center">
 					<h2 class="title">Media</h2>
 				</div>
-			</div>
+			</div> -->
 			<!-- /Row -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col col-md-6">
                     <iframe src="https://drawingcapital.substack.com/embed" width="100%" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
                 </div>
@@ -541,25 +541,25 @@
                    </div>
                 </div>
             </div>
-		</div>
+		</div> -->
 		<!-- /Container -->
 
-	</div>
+	<!-- </div> -->
 	<!-- /Blog -->
 
 	<!-- Contact -->
-	<div id="contact" class="section sm-padding">
+	<!-- <div id="contact" class="section sm-padding"> -->
 
 		<!-- Container -->
-		<div class="container">
+		<!-- <div class="container"> -->
 
 			<!-- Row -->
-			<div class="row contact">
+			<!-- <div class="row contact"> -->
 
 				<!-- Section-header -->
-				<div class="section-header text-center">
+				<!-- <div class="section-header text-center">
 					<h2 class="title contact">Contact Us</h2>
-				</div>
+				</div> -->
 				<!-- /Section-header -->
 
 				<!-- contact -->
@@ -573,12 +573,12 @@
 				<!-- /contact -->
 
 				<!-- contact -->
-				<div class="col-sm-12">
+				<!-- <div class="col-sm-12">
 					<div class="contact">
 						<i class="fa  fa-sm fa-envelope"></i>
 						<a href="mailto:invest@drawingcapital.com">invest@drawingcapital.com</a>
 					</div>
-				</div>
+				</div> -->
 				<!-- /contact -->
 
 				<!-- contact -->
@@ -591,13 +591,13 @@
 				</div> -->
 				<!-- /contact -->
 
-			</div>
+			<!-- </div> -->
 			<!-- /Row -->
 
-		</div>
+		<!-- </div> -->
 		<!-- /Container -->
 
-	</div>
+	<!-- </div> -->
 	<!-- /Contact -->
 
 
