update page color; font sizes

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     <li><a href="#features">Benefits</a></li> -->
 					<!-- <li><a href="#team">Team</a></li> -->
 					<!-- <li><a href="#blog">Research</a></li> -->
-					<li><a href="https://drawingcapital.substack.com/" target="_blank">NEWSLETTER</a></li>
-					<li><a href="./analytics.html">ANALYTICS</a></li>
-					<a href="mailto:invest@drawingcapital.com" class="btn btn-primary">CONTACT US</a>
+					<li><a href="https://drawingcapital.substack.com/" target="_blank">Newsletter</a></li>
+					<li><a href="./analytics.html">Analytics</a></li>
+					<a href="mailto:invest@drawingcapital.com" class="btn btn-primary" id="navBtn">Contact Us</a>
 				</ul>
 				<!-- /Main navigation -->
 
