Remove analytics link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<!-- <li><a href="#team">Team</a></li> -->
 					<!-- <li><a href="#blog">Research</a></li> -->
 					<li><a href="https://drawingcapital.substack.com/" target="_blank">Newsletter</a></li>
-					<li><a href="./analytics.html">Analytics</a></li>
+					<!-- <li><a href="./analytics.html">Analytics</a></li> -->
 					<a href="mailto:invest@drawingcapital.com" class="btn btn-primary" id="navBtn">Contact Us</a>
 				</ul>
 				<!-- /Main navigation -->
